[metadata]
name = cryptoanalysis
version = 1.0a
summary = Vigenere cipher analyser and decryptor
author = Marek Cermak
author-email = git.mcermak@gmail.com
license = MIT
home-page = https://github.com/CermakM/cryptoanalysis
description-file = README.md
requires-python >= 3
classifier =
    Development Status :: 1 - Planning

    Intended Audience :: Developers

    Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Content Management System

    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

    Programming Language :: Python :: 3
keywords =
    cryptoanalysis
    frequency
    analysis
    encode
    decode
    cipher
    rest

[options]
include_package_data = True

[files]
packages =
    cryptoanalysis
